src/haskell/ParAct.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from ParAct.y
-----------------------------------------------------------------------------

state 125 contains 25 reduce/reduce conflicts.
state 140 contains 2 shift/reduce conflicts.
state 141 contains 2 shift/reduce conflicts.

rule 50 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pAct -> Act                                 (0)
	%start_pHeader -> Header                           (1)
	%start_pUpdate -> Update                           (2)
	%start_pStorage -> Storage                         (3)
	%start_pLookup -> Lookup                           (4)
	%start_pBExp -> BExp                               (5)
	%start_pExp -> Exp                                 (6)
	%start_pExp1 -> Exp1                               (7)
	%start_pExp2 -> Exp2                               (8)
	%start_pDecl -> Decl                               (9)
	%start_pTDecl -> TDecl                             (10)
	%start_pType -> Type                               (11)
	%start_pListDecl -> ListDecl                       (12)
	%start_pListTDecl -> ListTDecl                     (13)
	%start_pListLookup -> ListLookup                   (14)
	%start_pListBExp -> ListBExp                       (15)
	%start_pListExp -> ListExp                         (16)
	%start_pListUpdate -> ListUpdate                   (17)
	%start_pListHeader -> ListHeader                   (18)
	Ident -> L_ident                                   (19)
	Integer -> L_integ                                 (20)
	Act -> ListHeader                                  (21)
	Header -> 'behaviour' Ident 'of' Ident             (22)
	Header -> 'interface' Ident '(' ListDecl ')'       (23)
	Header -> 'for' 'all' ListTDecl                    (24)
	Header -> 'iff' ListBExp                           (25)
	Header -> 'iff' 'in' 'range' Type ListExp          (26)
	Header -> 'if' ListBExp                            (27)
	Header -> 'storage' ListUpdate                     (28)
	Header -> 'returns' Exp                            (29)
	Update -> Storage '=>' Exp                         (30)
	Update -> Storage                                  (31)
	Update -> Storage '|->' Exp '=>' Exp               (32)
	Update -> Storage '|->' Exp                        (33)
	Storage -> Ident ListLookup                        (34)
	Storage -> Storage '.' Ident                       (35)
	Lookup -> '[' Ident ']'                            (36)
	BExp -> BExp 'and' BExp                            (37)
	BExp -> BExp 'or' BExp                             (38)
	BExp -> Exp '==' Exp                               (39)
	BExp -> Exp '=/=' Exp                              (40)
	BExp -> Exp '<=' Exp                               (41)
	BExp -> Exp '<' Exp                                (42)
	BExp -> Exp '>=' Exp                               (43)
	BExp -> Exp '>' Exp                                (44)
	BExp -> '(' BExp ')'                               (45)
	BExp -> 'true'                                     (46)
	BExp -> 'false'                                    (47)
	Exp -> Exp '+' Exp1                                (48)
	Exp -> Exp '-' Exp1                                (49)
	Exp -> '(' Exp ')'                                 (50)
	Exp -> Exp1                                        (51)
	Exp1 -> Exp1 '*' Exp2                              (52)
	Exp1 -> Exp1 '/' Exp2                              (53)
	Exp1 -> Exp2                                       (54)
	Exp2 -> Integer                                    (55)
	Exp2 -> Storage                                    (56)
	Exp2 -> '(' Exp ')'                                (57)
	Decl -> Type Ident                                 (58)
	TDecl -> Ident ':' Type                            (59)
	Type -> 'uint'                                     (60)
	Type -> 'int'                                      (61)
	Type -> 'uint256'                                  (62)
	Type -> 'int256'                                   (63)
	Type -> 'uint126'                                  (64)
	Type -> 'int126'                                   (65)
	Type -> 'uint8'                                    (66)
	Type -> 'int8'                                     (67)
	Type -> 'address'                                  (68)
	Type -> 'bytes32'                                  (69)
	Type -> 'bool'                                     (70)
	ListDecl ->                                        (71)
	ListDecl -> Decl                                   (72)
	ListDecl -> Decl ',' ListDecl                      (73)
	ListTDecl -> TDecl                                 (74)
	ListTDecl -> TDecl ListTDecl                       (75)
	ListLookup ->                                      (76)
	ListLookup -> ListLookup Lookup                    (77)
	ListBExp -> BExp                                   (78)
	ListBExp -> BExp ListBExp                          (79)
	ListExp -> Exp                                     (80)
	ListExp -> Exp ListExp                             (81)
	ListUpdate -> Update                               (82)
	ListUpdate -> Update ListUpdate                    (83)
	ListHeader -> Header                               (84)
	ListHeader -> Header ListHeader                    (85)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	','            { PT _ (TS _ 5) }
	'-'            { PT _ (TS _ 6) }
	'.'            { PT _ (TS _ 7) }
	'/'            { PT _ (TS _ 8) }
	':'            { PT _ (TS _ 9) }
	'<'            { PT _ (TS _ 10) }
	'<='           { PT _ (TS _ 11) }
	'=/='          { PT _ (TS _ 12) }
	'=='           { PT _ (TS _ 13) }
	'=>'           { PT _ (TS _ 14) }
	'>'            { PT _ (TS _ 15) }
	'>='           { PT _ (TS _ 16) }
	'['            { PT _ (TS _ 17) }
	']'            { PT _ (TS _ 18) }
	'address'      { PT _ (TS _ 19) }
	'all'          { PT _ (TS _ 20) }
	'and'          { PT _ (TS _ 21) }
	'behaviour'    { PT _ (TS _ 22) }
	'bool'         { PT _ (TS _ 23) }
	'bytes32'      { PT _ (TS _ 24) }
	'false'        { PT _ (TS _ 25) }
	'for'          { PT _ (TS _ 26) }
	'if'           { PT _ (TS _ 27) }
	'iff'          { PT _ (TS _ 28) }
	'in'           { PT _ (TS _ 29) }
	'int'          { PT _ (TS _ 30) }
	'int126'       { PT _ (TS _ 31) }
	'int256'       { PT _ (TS _ 32) }
	'int8'         { PT _ (TS _ 33) }
	'interface'    { PT _ (TS _ 34) }
	'of'           { PT _ (TS _ 35) }
	'or'           { PT _ (TS _ 36) }
	'range'        { PT _ (TS _ 37) }
	'returns'      { PT _ (TS _ 38) }
	'storage'      { PT _ (TS _ 39) }
	'true'         { PT _ (TS _ 40) }
	'uint'         { PT _ (TS _ 41) }
	'uint126'      { PT _ (TS _ 42) }
	'uint256'      { PT _ (TS _ 43) }
	'uint8'        { PT _ (TS _ 44) }
	'|->'          { PT _ (TS _ 45) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pAct     rule  0
	%start_pHeader  rule  1
	%start_pUpdate  rule  2
	%start_pStorage rule  3
	%start_pLookup  rule  4
	%start_pBExp    rule  5
	%start_pExp     rule  6
	%start_pExp1    rule  7
	%start_pExp2    rule  8
	%start_pDecl    rule  9
	%start_pTDecl   rule  10
	%start_pType    rule  11
	%start_pListDecl rule  12
	%start_pListTDecl rule  13
	%start_pListLookup rule  14
	%start_pListBExp rule  15
	%start_pListExp rule  16
	%start_pListUpdate rule  17
	%start_pListHeader rule  18
	Ident           rule  19
	Integer         rule  20
	Act             rule  21
	Header          rules 22, 23, 24, 25, 26, 27, 28, 29
	Update          rules 30, 31, 32, 33
	Storage         rules 34, 35
	Lookup          rule  36
	BExp            rules 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47
	Exp             rules 48, 49, 50, 51
	Exp1            rules 52, 53, 54
	Exp2            rules 55, 56, 57
	Decl            rule  58
	TDecl           rule  59
	Type            rules 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70
	ListDecl        rules 71, 72, 73
	ListTDecl       rules 74, 75
	ListLookup      rules 76, 77
	ListBExp        rules 78, 79
	ListExp         rules 80, 81
	ListUpdate      rules 82, 83
	ListHeader      rules 84, 85

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'behaviour'    shift, and enter state 23
	'for'          shift, and enter state 24
	'if'           shift, and enter state 25
	'iff'          shift, and enter state 26
	'interface'    shift, and enter state 27
	'returns'      shift, and enter state 28
	'storage'      shift, and enter state 29

	Act            goto state 79
	Header         goto state 21
	ListHeader     goto state 80

State 1


	'behaviour'    shift, and enter state 23
	'for'          shift, and enter state 24
	'if'           shift, and enter state 25
	'iff'          shift, and enter state 26
	'interface'    shift, and enter state 27
	'returns'      shift, and enter state 28
	'storage'      shift, and enter state 29

	Header         goto state 78

State 2


	L_ident        shift, and enter state 20

	Ident          goto state 30
	Update         goto state 77
	Storage        goto state 32

State 3


	L_ident        shift, and enter state 20

	Ident          goto state 30
	Storage        goto state 76

State 4


	'['            shift, and enter state 75

	Lookup         goto state 74

State 5


	'('            shift, and enter state 45
	'false'        shift, and enter state 46
	'true'         shift, and enter state 47
	L_ident        shift, and enter state 20
	L_integ        shift, and enter state 41

	Ident          goto state 30
	Integer        goto state 34
	Storage        goto state 35
	BExp           goto state 73
	Exp            goto state 43
	Exp1           goto state 37
	Exp2           goto state 38

State 6


	'('            shift, and enter state 40
	L_ident        shift, and enter state 20
	L_integ        shift, and enter state 41

	Ident          goto state 30
	Integer        goto state 34
	Storage        goto state 35
	Exp            goto state 72
	Exp1           goto state 37
	Exp2           goto state 38

State 7


	'('            shift, and enter state 70
	L_ident        shift, and enter state 20
	L_integ        shift, and enter state 41

	Ident          goto state 30
	Integer        goto state 34
	Storage        goto state 35
	Exp1           goto state 71
	Exp2           goto state 38

State 8


	'('            shift, and enter state 70
	L_ident        shift, and enter state 20
	L_integ        shift, and enter state 41

	Ident          goto state 30
	Integer        goto state 34
	Storage        goto state 35
	Exp2           goto state 69

State 9


	'address'      shift, and enter state 55
	'bool'         shift, and enter state 56
	'bytes32'      shift, and enter state 57
	'int'          shift, and enter state 58
	'int126'       shift, and enter state 59
	'int256'       shift, and enter state 60
	'int8'         shift, and enter state 61
	'uint'         shift, and enter state 62
	'uint126'      shift, and enter state 63
	'uint256'      shift, and enter state 64
	'uint8'        shift, and enter state 65

	Decl           goto state 68
	Type           goto state 53

State 10


	L_ident        shift, and enter state 20

	Ident          goto state 49
	TDecl          goto state 67

State 11


	'address'      shift, and enter state 55
	'bool'         shift, and enter state 56
	'bytes32'      shift, and enter state 57
	'int'          shift, and enter state 58
	'int126'       shift, and enter state 59
	'int256'       shift, and enter state 60
	'int8'         shift, and enter state 61
	'uint'         shift, and enter state 62
	'uint126'      shift, and enter state 63
	'uint256'      shift, and enter state 64
	'uint8'        shift, and enter state 65

	Type           goto state 66

State 12


	'address'      shift, and enter state 55
	'bool'         shift, and enter state 56
	'bytes32'      shift, and enter state 57
	'int'          shift, and enter state 58
	'int126'       shift, and enter state 59
	'int256'       shift, and enter state 60
	'int8'         shift, and enter state 61
	'uint'         shift, and enter state 62
	'uint126'      shift, and enter state 63
	'uint256'      shift, and enter state 64
	'uint8'        shift, and enter state 65
	%eof           reduce using rule 71

	Decl           goto state 52
	Type           goto state 53
	ListDecl       goto state 54

State 13


	L_ident        shift, and enter state 20

	Ident          goto state 49
	TDecl          goto state 50
	ListTDecl      goto state 51

State 14


	'['            reduce using rule 76
	%eof           reduce using rule 76

	ListLookup     goto state 48

State 15


	'('            shift, and enter state 45
	'false'        shift, and enter state 46
	'true'         shift, and enter state 47
	L_ident        shift, and enter state 20
	L_integ        shift, and enter state 41

	Ident          goto state 30
	Integer        goto state 34
	Storage        goto state 35
	BExp           goto state 42
	Exp            goto state 43
	Exp1           goto state 37
	Exp2           goto state 38
	ListBExp       goto state 44

State 16


	'('            shift, and enter state 40
	L_ident        shift, and enter state 20
	L_integ        shift, and enter state 41

	Ident          goto state 30
	Integer        goto state 34
	Storage        goto state 35
	Exp            goto state 36
	Exp1           goto state 37
	Exp2           goto state 38
	ListExp        goto state 39

State 17


	L_ident        shift, and enter state 20

	Ident          goto state 30
	Update         goto state 31
	Storage        goto state 32
	ListUpdate     goto state 33

State 18


	'behaviour'    shift, and enter state 23
	'for'          shift, and enter state 24
	'if'           shift, and enter state 25
	'iff'          shift, and enter state 26
	'interface'    shift, and enter state 27
	'returns'      shift, and enter state 28
	'storage'      shift, and enter state 29

	Header         goto state 21
	ListHeader     goto state 22

State 19


	L_ident        shift, and enter state 20


State 20

	Ident -> L_ident .                                  (rule 19)

	'('            reduce using rule 19
	')'            reduce using rule 19
	'*'            reduce using rule 19
	'+'            reduce using rule 19
	','            reduce using rule 19
	'-'            reduce using rule 19
	'.'            reduce using rule 19
	'/'            reduce using rule 19
	':'            reduce using rule 19
	'<'            reduce using rule 19
	'<='           reduce using rule 19
	'=/='          reduce using rule 19
	'=='           reduce using rule 19
	'=>'           reduce using rule 19
	'>'            reduce using rule 19
	'>='           reduce using rule 19
	'['            reduce using rule 19
	']'            reduce using rule 19
	'and'          reduce using rule 19
	'behaviour'    reduce using rule 19
	'false'        reduce using rule 19
	'for'          reduce using rule 19
	'if'           reduce using rule 19
	'iff'          reduce using rule 19
	'interface'    reduce using rule 19
	'of'           reduce using rule 19
	'or'           reduce using rule 19
	'returns'      reduce using rule 19
	'storage'      reduce using rule 19
	'true'         reduce using rule 19
	'|->'          reduce using rule 19
	L_ident        reduce using rule 19
	L_integ        reduce using rule 19
	%eof           reduce using rule 19


State 21

	ListHeader -> Header .                              (rule 84)
	ListHeader -> Header . ListHeader                   (rule 85)

	'behaviour'    shift, and enter state 23
	'for'          shift, and enter state 24
	'if'           shift, and enter state 25
	'iff'          shift, and enter state 26
	'interface'    shift, and enter state 27
	'returns'      shift, and enter state 28
	'storage'      shift, and enter state 29
	%eof           reduce using rule 84

	Header         goto state 21
	ListHeader     goto state 118

State 22

	%start_pListHeader -> ListHeader .                  (rule 18)

	%eof           accept


State 23

	Header -> 'behaviour' . Ident 'of' Ident            (rule 22)

	L_ident        shift, and enter state 20

	Ident          goto state 117

State 24

	Header -> 'for' . 'all' ListTDecl                   (rule 24)

	'all'          shift, and enter state 116


State 25

	Header -> 'if' . ListBExp                           (rule 27)

	'('            shift, and enter state 45
	'false'        shift, and enter state 46
	'true'         shift, and enter state 47
	L_ident        shift, and enter state 20
	L_integ        shift, and enter state 41

	Ident          goto state 30
	Integer        goto state 34
	Storage        goto state 35
	BExp           goto state 42
	Exp            goto state 43
	Exp1           goto state 37
	Exp2           goto state 38
	ListBExp       goto state 115

State 26

	Header -> 'iff' . ListBExp                          (rule 25)
	Header -> 'iff' . 'in' 'range' Type ListExp         (rule 26)

	'('            shift, and enter state 45
	'false'        shift, and enter state 46
	'in'           shift, and enter state 114
	'true'         shift, and enter state 47
	L_ident        shift, and enter state 20
	L_integ        shift, and enter state 41

	Ident          goto state 30
	Integer        goto state 34
	Storage        goto state 35
	BExp           goto state 42
	Exp            goto state 43
	Exp1           goto state 37
	Exp2           goto state 38
	ListBExp       goto state 113

State 27

	Header -> 'interface' . Ident '(' ListDecl ')'      (rule 23)

	L_ident        shift, and enter state 20

	Ident          goto state 112

State 28

	Header -> 'returns' . Exp                           (rule 29)

	'('            shift, and enter state 40
	L_ident        shift, and enter state 20
	L_integ        shift, and enter state 41

	Ident          goto state 30
	Integer        goto state 34
	Storage        goto state 35
	Exp            goto state 111
	Exp1           goto state 37
	Exp2           goto state 38

State 29

	Header -> 'storage' . ListUpdate                    (rule 28)

	L_ident        shift, and enter state 20

	Ident          goto state 30
	Update         goto state 31
	Storage        goto state 32
	ListUpdate     goto state 110

State 30

	Storage -> Ident . ListLookup                       (rule 34)

	'('            reduce using rule 76
	')'            reduce using rule 76
	'*'            reduce using rule 76
	'+'            reduce using rule 76
	'-'            reduce using rule 76
	'.'            reduce using rule 76
	'/'            reduce using rule 76
	'<'            reduce using rule 76
	'<='           reduce using rule 76
	'=/='          reduce using rule 76
	'=='           reduce using rule 76
	'=>'           reduce using rule 76
	'>'            reduce using rule 76
	'>='           reduce using rule 76
	'['            reduce using rule 76
	'and'          reduce using rule 76
	'behaviour'    reduce using rule 76
	'false'        reduce using rule 76
	'for'          reduce using rule 76
	'if'           reduce using rule 76
	'iff'          reduce using rule 76
	'interface'    reduce using rule 76
	'or'           reduce using rule 76
	'returns'      reduce using rule 76
	'storage'      reduce using rule 76
	'true'         reduce using rule 76
	'|->'          reduce using rule 76
	L_ident        reduce using rule 76
	L_integ        reduce using rule 76
	%eof           reduce using rule 76

	ListLookup     goto state 109

State 31

	ListUpdate -> Update .                              (rule 82)
	ListUpdate -> Update . ListUpdate                   (rule 83)

	'behaviour'    reduce using rule 82
	'for'          reduce using rule 82
	'if'           reduce using rule 82
	'iff'          reduce using rule 82
	'interface'    reduce using rule 82
	'returns'      reduce using rule 82
	'storage'      reduce using rule 82
	L_ident        shift, and enter state 20
	%eof           reduce using rule 82

	Ident          goto state 30
	Update         goto state 31
	Storage        goto state 32
	ListUpdate     goto state 108

State 32

	Update -> Storage . '=>' Exp                        (rule 30)
	Update -> Storage .                                 (rule 31)
	Update -> Storage . '|->' Exp '=>' Exp              (rule 32)
	Update -> Storage . '|->' Exp                       (rule 33)
	Storage -> Storage . '.' Ident                      (rule 35)

	'.'            shift, and enter state 81
	'=>'           shift, and enter state 106
	'behaviour'    reduce using rule 31
	'for'          reduce using rule 31
	'if'           reduce using rule 31
	'iff'          reduce using rule 31
	'interface'    reduce using rule 31
	'returns'      reduce using rule 31
	'storage'      reduce using rule 31
	'|->'          shift, and enter state 107
	L_ident        reduce using rule 31
	%eof           reduce using rule 31


State 33

	%start_pListUpdate -> ListUpdate .                  (rule 17)

	%eof           accept


State 34

	Exp2 -> Integer .                                   (rule 55)

	'('            reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	'-'            reduce using rule 55
	'/'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=/='          reduce using rule 55
	'=='           reduce using rule 55
	'=>'           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'and'          reduce using rule 55
	'behaviour'    reduce using rule 55
	'false'        reduce using rule 55
	'for'          reduce using rule 55
	'if'           reduce using rule 55
	'iff'          reduce using rule 55
	'interface'    reduce using rule 55
	'or'           reduce using rule 55
	'returns'      reduce using rule 55
	'storage'      reduce using rule 55
	'true'         reduce using rule 55
	L_ident        reduce using rule 55
	L_integ        reduce using rule 55
	%eof           reduce using rule 55


State 35

	Storage -> Storage . '.' Ident                      (rule 35)
	Exp2 -> Storage .                                   (rule 56)

	'('            reduce using rule 56
	')'            reduce using rule 56
	'*'            reduce using rule 56
	'+'            reduce using rule 56
	'-'            reduce using rule 56
	'.'            shift, and enter state 81
	'/'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=/='          reduce using rule 56
	'=='           reduce using rule 56
	'=>'           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'and'          reduce using rule 56
	'behaviour'    reduce using rule 56
	'false'        reduce using rule 56
	'for'          reduce using rule 56
	'if'           reduce using rule 56
	'iff'          reduce using rule 56
	'interface'    reduce using rule 56
	'or'           reduce using rule 56
	'returns'      reduce using rule 56
	'storage'      reduce using rule 56
	'true'         reduce using rule 56
	L_ident        reduce using rule 56
	L_integ        reduce using rule 56
	%eof           reduce using rule 56


State 36

	Exp -> Exp . '+' Exp1                               (rule 48)
	Exp -> Exp . '-' Exp1                               (rule 49)
	ListExp -> Exp .                                    (rule 80)
	ListExp -> Exp . ListExp                            (rule 81)

	'('            shift, and enter state 40
	'+'            shift, and enter state 85
	'-'            shift, and enter state 86
	'behaviour'    reduce using rule 80
	'for'          reduce using rule 80
	'if'           reduce using rule 80
	'iff'          reduce using rule 80
	'interface'    reduce using rule 80
	'returns'      reduce using rule 80
	'storage'      reduce using rule 80
	L_ident        shift, and enter state 20
	L_integ        shift, and enter state 41
	%eof           reduce using rule 80

	Ident          goto state 30
	Integer        goto state 34
	Storage        goto state 35
	Exp            goto state 36
	Exp1           goto state 37
	Exp2           goto state 38
	ListExp        goto state 105

State 37

	Exp -> Exp1 .                                       (rule 51)
	Exp1 -> Exp1 . '*' Exp2                             (rule 52)
	Exp1 -> Exp1 . '/' Exp2                             (rule 53)

	'('            reduce using rule 51
	')'            reduce using rule 51
	'*'            shift, and enter state 87
	'+'            reduce using rule 51
	'-'            reduce using rule 51
	'/'            shift, and enter state 88
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=/='          reduce using rule 51
	'=='           reduce using rule 51
	'=>'           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'and'          reduce using rule 51
	'behaviour'    reduce using rule 51
	'false'        reduce using rule 51
	'for'          reduce using rule 51
	'if'           reduce using rule 51
	'iff'          reduce using rule 51
	'interface'    reduce using rule 51
	'or'           reduce using rule 51
	'returns'      reduce using rule 51
	'storage'      reduce using rule 51
	'true'         reduce using rule 51
	L_ident        reduce using rule 51
	L_integ        reduce using rule 51
	%eof           reduce using rule 51


State 38

	Exp1 -> Exp2 .                                      (rule 54)

	'('            reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=/='          reduce using rule 54
	'=='           reduce using rule 54
	'=>'           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'and'          reduce using rule 54
	'behaviour'    reduce using rule 54
	'false'        reduce using rule 54
	'for'          reduce using rule 54
	'if'           reduce using rule 54
	'iff'          reduce using rule 54
	'interface'    reduce using rule 54
	'or'           reduce using rule 54
	'returns'      reduce using rule 54
	'storage'      reduce using rule 54
	'true'         reduce using rule 54
	L_ident        reduce using rule 54
	L_integ        reduce using rule 54
	%eof           reduce using rule 54


State 39

	%start_pListExp -> ListExp .                        (rule 16)

	%eof           accept


State 40

	Exp -> '(' . Exp ')'                                (rule 50)
	Exp2 -> '(' . Exp ')'                               (rule 57)

	'('            shift, and enter state 40
	L_ident        shift, and enter state 20
	L_integ        shift, and enter state 41

	Ident          goto state 30
	Integer        goto state 34
	Storage        goto state 35
	Exp            goto state 104
	Exp1           goto state 37
	Exp2           goto state 38

State 41

	Integer -> L_integ .                                (rule 20)

	'('            reduce using rule 20
	')'            reduce using rule 20
	'*'            reduce using rule 20
	'+'            reduce using rule 20
	'-'            reduce using rule 20
	'/'            reduce using rule 20
	'<'            reduce using rule 20
	'<='           reduce using rule 20
	'=/='          reduce using rule 20
	'=='           reduce using rule 20
	'=>'           reduce using rule 20
	'>'            reduce using rule 20
	'>='           reduce using rule 20
	'and'          reduce using rule 20
	'behaviour'    reduce using rule 20
	'false'        reduce using rule 20
	'for'          reduce using rule 20
	'if'           reduce using rule 20
	'iff'          reduce using rule 20
	'interface'    reduce using rule 20
	'or'           reduce using rule 20
	'returns'      reduce using rule 20
	'storage'      reduce using rule 20
	'true'         reduce using rule 20
	L_ident        reduce using rule 20
	L_integ        reduce using rule 20
	%eof           reduce using rule 20


State 42

	BExp -> BExp . 'and' BExp                           (rule 37)
	BExp -> BExp . 'or' BExp                            (rule 38)
	ListBExp -> BExp .                                  (rule 78)
	ListBExp -> BExp . ListBExp                         (rule 79)
